2006-12-27  Katsutoshi Itoh <cut-sea@kahua.org>

	* Remove: skel/proj/auto-update-base.kahua,
	          skel/proj/debug-support.kahua
	          skel/proj/default.kahua
	          skel/proj/page.kahua
	          skel/proj/parts-collection.kahua
	          skel/proj/pcont-page.kahua
	          skel/proj/session.kahua
	          skel/proj/slot-acl-base.kahua
	          skel/proj/utility.kahua
	          skel/proj/validator.kahua
	* Change: skel/proj/proj.kahua
	  rewrite hello level simple code.
	* Change: src/kahua-package.scm
	  catch up skel's change.
	* Change: skel/test/test.scm.in
	          skel/templates/page.xml
	  modify sample code using page template file.
	* New: skel/MESSAGES
	  English Messages after install skelton project.
	* Change: at install Kahua mv old skel directory to skel.bak.
	* Fix: skel/INSTALL, skel/MESSAGES
	  modify typo :argument => :arguments.
	* Change: skel/proj/proj.kahua
	  modify message.
	
2006-12-27  Tatsuya BIZENN  <bizenn@arthub.net>

	* New: doc/Scripts/*.txt
	  English documents.

2006-12-27  Katsutoshi Itoh <cut-sea@kahua.org>

	* Change: skel/configure.ac
	  remove nobsun@kahua.org literal email address.

2006-12-27  Tatsuya BIZENN  <bizenn@arthub.net>

	* Update: doc/Modules/kahua.test.worker.ja,
	  doc/Modules/kahua.test.xml.ja

	* New: doc/Modules/kahua.xml-template.ja

	* Change: skel/configure.ac, skel/Makefile.in
	  Now skelton have --with-site-bundle configure option.
	  Fix some old style installation target.

	* New: examples/configure.ac
	  Separate configure script of examples. It's to support
	  installation into a site bundle.

2006-12-26  Tatsuya BIZENN  <bizenn@arthub.net>

	* Add: src/kahua/persistence.scm
	  kahua-indexable-object? is predicate that return #t
	  if a argument is able to use as index value, or #f.

	* Change: src/kahua/elem.scm
	  Export define-basic-element and define-elements.
	  Drop pdf/ and pdf:.
	  Add node-list->node-set

	* Update: doc/Modules/*